# git_practice

./: README.md
.github/workflows/: build_and_run.yml  c_gtest.yml  docs.yml  self-hosted.yml  zephyr_build_and_run.yml
c/: CMakeLists.txt
c/day1_dynamic_array/: CMakeLists.txt
c/day1_dynamic_array/src/: dyn_array.c
c/day2_string_buffer/: CMakeLists.txt
c/day2_string_buffer/src/: strbuf.c  strbuf.h
c/day2_string_buffer/tests/: strbuf_test.cpp
c/day3_singly_linked_list/: CMakeLists.txt
c/day3_singly_linked_list/src/: slist.c  slist.h
c/day3_singly_linked_list/tests/: slist_algorithms_test.cpp  slist_test.cpp
c/day5_double_linked_list/: CMakeLists.txt
c/day5_double_linked_list/src/: dlist.c  dlist.h
c/day5_double_linked_list/tests/: dlist_tests.cpp
c/day6_event_notifier/: CMakeLists.txt
c/day6_event_notifier/include/: event_notifier.h
c/day6_event_notifier/src/: event_notifier.c
c/day6_event_notifier/test/: event_notifier_test.cpp  real_malloc.cpp  wrap_malloc.cpp
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  getting_started.rst  index.rst  usage.rst
